  * Adjust timedated and hostnamed autopkgtests to current upstream version.
  * Replace our Debian hwdb.bin location patch with what got committed
    upstream. Run hwdb update with the new --usr option to keep current
    behaviour.
  * debian/README.Debian: Document how to debug boot or shutdown problems with
    the debug shell. (Closes: #766039)

 -- Martin Pitt <mpitt@debian.org>  Sun, 12 Oct 2014 17:29:00 +0200

systemd (215-5) unstable; urgency=medium

  [ Martin Pitt ]
  * Unblacklist hyperv_fb again, it is needed for graphical support on Hyper-V
    platforms. Thanks Andy Whitcroft! (LP: #1359933)
  * Bump systemd-shim Depends/Breaks to 8-2 to ensure a lockstep upgrade.
    (Closes: #761947)

  [ Sjoerd Simons ]
  * d/p/sd-bus-Accept-no-sender-as-the-destination-field.patch
    + Fix compatibility between systemctl v215 and v208. Resolves issue when
      reloads of services is requested before systemd is re-execed
      (Closes: #762146)

  [ Michael Biebl ]
  * Don't overmount existing /run/user/<UID> directories with a per-user tmpfs
    on upgrades. (Closes: #762041)
  * Re-enable mount propagation for udevd. This avoids that broken software
    like laptop-mode-tools, which runs mount from within udev rules, causes
    the root file system to end up read-only. (Closes: #762018)

 -- Michael Biebl <biebl@debian.org>  Sat, 27 Sep 2014 17:49:47 +0200

systemd (215-4) unstable; urgency=medium

  * Upload to unstable.

 -- Michael Biebl <biebl@debian.org>  Mon, 15 Sep 2014 17:38:30 +0200

systemd (215-3) experimental; urgency=medium

  [ Ben Howard ]
  * 75-persistent-net-generator.rules: Fix matches of HyperV. (LP: #1361272)

  [ Martin Pitt ]
  * 75-persistent-net-generator.rules: Add new MS Azure MAC prefix 00:25:ae.
    (LP: #1367883)

  [ Michael Biebl ]
  * Update upstream v215-stable patch series.
  * The /dev/log socket and /dev/initctl FIFO have been moved to /run and
    replaced by symlinks. Create the symlinks manually on upgrades as well.